Fix layout and form spacing.

--- a/src/scss/layout/_form.scss
+++ b/src/scss/layout/_form.scss
@@ -1,1 +1,9 @@
+@use '../common/mixins' as mixins;
 
+.form {
+  padding: var(--spacing-3);
+
+  @include mixins.tablet {
+    width: 400px;
+  }
+}
