--- a/src/scss/pages/_create.scss
+++ b/src/scss/pages/_create.scss
@@ -1,4 +1,14 @@
+@use '../common/mixins' as mixins;
+
 :root:has(.create) {
   // fonts
   --font-main: 'Gochi Hand', cursive;
+}
+
+.page {
+  @include mixins.tablet {
+    display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+  }
 }
